--- a/resources/view/home/login.html
+++ b/resources/view/home/login.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <title>CRUD com PHP, de forma simples e fácil</title>
+    <title>Shopping</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
+
 <body>
+<header>
+    <h1>
+        <img src="../../img/shopping.jpg" width="100" height="100" alt="Shopping">
+    </h1>
+    <?php include 'menu.html';?>
+</header>
+
+<div id = "main">
+    <h1 id="cabecalho">Login</h1>
+</div>
 <form>
     Nome:<br/>
     <input type="text" name="nome" placeholder="Qual seu nome?"><br/><br/>
@@ -17,5 +30,10 @@
     <input type="hidden" value="-1" name="id" >
     <button type="submit">Cadastrar</button>
 </form>
+
+
+<footer>
+    <h2 id="info">Rodapé</h2>
+</footer>
 </body>
 </html>
