--- a/src/resources/view/home/home.html
+++ b/src/resources/view/home/home.html
@@ -8,9 +8,9 @@
 
 <body>
 <header>
-    <h1>
-        <img src="/img/shopping.jpg" width="100" height="100" alt="Shopping">
-    </h1>
+    <!--<h1>-->
+        <!--<img src="/img/shopping.jpg" width="100" height="100" alt="Shopping">-->
+    <!--</h1>-->
     <?php include 'menu.html';?>
 </header>
 
